# lambda-bifurcate-logs-cdk

./: .gitignore  Cargo.toml  README.md  cdk.json  package.json
lib/: logfilter-stack.ts
src/: handler.ts  main.rs
