[package]
name = "logfilter"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.14.0", default-features = false, features = ["cloudwatch_logs"] }

lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.34"
serde = "1.0.197"
serde_json = "1.0.114"

